--- a/css/events.css
+++ b/css/events.css
@@ -70,6 +70,54 @@ nav ul li.special a {
     font-weight: bold;
 }
 
+.glow {
+    font-family: 'Old English Five', serif;
+    font-size: 40px;
+    color: #00ffff;
+    cursor: pointer;
+    transition: text-shadow 0.3s ease-in-out;
+}
+.glow:hover {
+    text-shadow: 0 0 10px #fff, 0 0 20px #00e1ff, 0 0 30px #00c9f1;
+}
+.separator {
+    width: 50%;
+    height: 4px;
+    background: #00ffff;
+    box-shadow: 0px 0px 10px rgb(0, 225, 255);
+    margin: 30px auto;
+    border-radius: 2px;
+}
+.social-links a {
+    color: white;
+    font-size: 24px;
+    margin: 0 10px;
+    transition: color 0.3s;
+}
+.social-links a:hover {
+    color: rgb(0, 229, 255);
+}
+/* Scroll to Top Button Styling */
+#scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #c1000f;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none; /* Hidden by default */
+    transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+
+#scrollToTopBtn:active {
+    transform: scale(0.95); /* Button scales down when clicked */
+}
+
 
 /* Media Queries for smaller screens */
 @media (max-width: 768px) {
